# raspberry-pi-pico-oscilloscope

./: CMakeLists.txt  README.md  main.c  pi-pico-oscilloscope.uf2  plot.py  plotter.py  pulse.uf2  sample_counter.py  samples_reader.py
Oscilloscope_App/: CMakeLists.txt  Chart.cpp  Chart.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SerialPort.cpp  SerialPort.h  SetPortWindow.cpp  SetPortWindow.h  SetPortWindow.ui
Pi_Pico/: CMakeLists.txt  main.c
Python_scripts/: plot.py  samples.npy  samples_reader.py  send_pulse.py
